# rust-paillier

./: Cargo.toml  MODIFY.md
benches/: keygen.rs  proof.rs
benches/optimized_paillier/: encryption.rs  encryption_precompute.rs  keygen.rs  precomputable.rs
benches/optimized_paillier/benchmark_result/encryption_precompute/: NKeySize2048.json  NKeySize3072.json
benches/optimized_paillier/helpers/: logger.rs  mod.rs
benches/paillier/: arith.rs  encryption.rs  keygen.rs  proof.rs
benches/paillier/helpers/: mod.rs
benches/results/: 2048_448.json  3072_512.json  64_32.json  7680_768.json
examples/optimized_paillier/: basic.rs  client.rs  core.rs  server.rs  test.rs  test_produce_redis.rs
examples/paillier/: basic.rs  core.rs  packed.rs  simple-voting.rs
pkg/: kzen_paillier.d.ts  kzen_paillier.js  kzen_paillier_bg.js  kzen_paillier_bg.wasm  kzen_paillier_bg.wasm.d.ts  package-lock.json  package.json
src/: lib.rs  precomputable.rs  primesample.rs
src/optimized_paillier/: core.rs  decryption_key.rs  encryption_key.rs  keygen.rs  mod.rs  ngen.rs  precomputeTable.rs  primesample.rs  serialize.rs  test.rs  traits.rs  utils.rs
src/optimized_paillier/encoding/: integral.rs  mod.rs
src/paillier/: core.rs  keygen.rs  mod.rs
src/paillier/encoding/: integral.rs
www/: kzen_paillier.d.ts  kzen_paillier.js  kzen_paillier_bg.wasm  kzen_paillier_bg.wasm.d.ts
www/static/: gmp.wasm  main.js  package-lock.json  package.json
