[package]
name = "kzen-paillier"
version = "0.4.3"
edition = "2018"
description = "Efficient pure-Rust library for the Paillier partially homomorphic encryption scheme"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ZenGo-X/rust-paillier"
categories = ["cryptography", "algorithms"]
keywords = ["paillier", "homomorphic", "encryption", "zero-knowledge", "cryptoagorithms"]

[dependencies]
rayon = "1.1"
serde = { version = "1.0", features = ["derive"] }
curv-kzen = { version = "0.10.0", default-features = false }
serde_json = "1.0"

[dev-dependencies]
bencher = "0.1"
serde_json = "1.0"
rand = "0.6"

[features]
default = ["curv-kzen/rust-gmp-kzen"]

######### Paillier 

# benchmark
#[[bench]]
#name = "arith"
#harness = false
#path = "benches/paillier/arith.rs"
#
#[[bench]]
#name = "encryption"
#harness = false
#path = "benches/paillier/encryption.rs"
#
#[[bench]]
#name = "keygen"
#harness = false
#path = "benches/paillier/keygen.rs"
#
#[[bench]]
#name = "keygen_optimized"
#harness = false
#path = "benches/optimized_paillier/keygen.rs"


#[[bench]]
#name = "encryption_optimized"
#harness = false
#path = "benches/optimized_paillier/encryption.rs"


[[bench]]
name = "encryption"
harness = false
path = "benches/paillier/encryption.rs"

#[[bench]]
#name = "proof"
#harness = false
#path = "benches/paillier/proof.rs"

# examples
[[example]]
name = "basic"
path = "examples/paillier/basic.rs"

[[example]]
name = "core"
path = "examples/paillier/core.rs"

[[example]]
name = "packed"
path = "examples/paillier/packed.rs"

[[example]]
name = "simple-voting"
path = "examples/paillier/simple-voting.rs"

# ######### Optimized Paillier 

# # benchmark
# [[bench]]
# name = "optimized-arith"
# harness = false
# path = "benches/optimized_paillier/arith.rs"

# [[bench]]
# name = "optimized-encryption"
# harness = false
# path = "benches/optimized_paillier/encryption.rs"

# [[bench]]
# name = "optimized-keygen"
# harness = false
# path = "benches/optimized_paillier/keygen.rs"

# [[bench]]
# name = "optimized-proof"
# harness = false
# path = "benches/optimized_paillier/proof.rs"

# examples
[[example]]
name = "optimized-basic"
path = "examples/optimized_paillier/basic.rs"

[[example]]
name = "optimized-core"
path = "examples/optimized_paillier/core.rs"

# [[example]]
# name = "optimized-packed"
# path = "examples/optimized_paillier/packed.rs"

# [[example]]
# name = "optimized-simple-voting"
# path = "examples/optimized_paillier/simple-voting.rs"